syntax = "proto3";
package LimeChain.mantrachain.mdb.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/LimeChain/mantrachain/x/mdb/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  string valid_nft_collection_id = 1;
  string nft_collection_default_id = 2;
  string nft_collection_default_name = 3;
  int32 valid_nft_collection_metadata_symbol_min_length = 4;
  int32 valid_nft_collection_metadata_symbol_max_length = 5;
  int32 valid_nft_collection_metadata_description_max_length = 6;
  int32 valid_nft_collection_metadata_name_max_length = 7;
  int32 valid_nft_collection_metadata_images_max_count = 8;
  int32 valid_nft_collection_metadata_images_type_max_length = 9;
  int32 valid_nft_collection_metadata_links_max_count = 10;
  int32 valid_nft_collection_metadata_links_type_max_length = 11;
  int32 valid_nft_collection_metadata_options_max_count = 12;
  int32 valid_nft_collection_metadata_options_type_max_length = 13;
  int32 valid_nft_collection_metadata_options_value_max_length = 14;
  int32 valid_nft_collection_metadata_options_sub_value_max_length = 15;
  string valid_nft_id = 16;
  int32 valid_nft_metadata_max_count = 17;
  int32 valid_nft_metadata_title_max_length = 18;
  int32 valid_nft_metadata_description_max_length = 19;
  int32 valid_nft_metadata_images_max_count = 20;
  int32 valid_nft_metadata_images_type_max_length = 21;
  int32 valid_nft_metadata_links_max_count = 22;
  int32 valid_nft_metadata_links_type_max_length = 23;
  int32 valid_nft_metadata_attributes_max_count = 24;
  int32 valid_nft_metadata_attributes_type_max_length = 25;
  int32 valid_nft_metadata_attributes_value_max_length = 26;
  int32 valid_nft_metadata_attributes_sub_value_max_length = 27;
  int32 valid_burn_nft_max_count = 28;
}
